--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = leboncoin.settings
+default = real-estate-scraper.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = leboncoin
+project = real-estate-scraper
